* Login Page: Fix some alignment issues in login page - thanks to Stefan Unverricht

--- a/pixelegg/css/pixelegg.css
+++ b/pixelegg/css/pixelegg.css
@@ -1795,7 +1795,7 @@ body {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  width: 250px;
+  width: calc(250px - 8px);
 }
 #loginMainDiv div#centerBox form table.divLoginbox input:hover {
   -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
@@ -1815,6 +1815,7 @@ body {
   background-color: #ffc200;
   color: #000000;
   font-size: 20px;
+  width: 250px;
 }
 #loginMainDiv div#centerBox form table.divLoginbox input[type="submit"]:hover {
   -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
